--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install && zip -r package.zip app.js config.js node_modules/"
   },
   "author": "",
   "license": "ISC",
